WEEK 1/perimeter_quiz/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files (x86)\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
C:\Program Files (x86)\BlueJ\lib\bluejcore.jar;C:\Program Files (x86)\BlueJ\lib\junit-4.11.jar;C:\Program Files (x86)\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files (x86)\BlueJ\lib\lang-stride.jar;C:\Program Files (x86)\BlueJ\lib\userlib\apache-csv.jar;C:\Program Files (x86)\BlueJ\lib\userlib\courserajava.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-core.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-device.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-gpio-extension.jar;C:\Program Files (x86)\BlueJ\lib\userlib\pi4j-service.jar;C:\Users\user\Downloads\perimeter_quiz
-d
C:\Users\user\Downloads\perimeter_quiz\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\user\Downloads\perimeter_quiz\PerimeterAssignmentRunner.java
<---- end of javadoc command ---->
Loading source file C:\Users\user\Downloads\perimeter_quiz\PerimeterAssignmentRunner.java...
C:\Users\user\Downloads\perimeter_quiz\PerimeterAssignmentRunner.java:41: error: <identifier> expected
        s.
          ^
C:\Users\user\Downloads\perimeter_quiz\PerimeterAssignmentRunner.java:41: error: not a statement
        s.
         ^
C:\Users\user\Downloads\perimeter_quiz\PerimeterAssignmentRunner.java:42: error: not a statement
        return 0.0;
               ^
3 errors
